# dots-detailed-pv-installation-service

./: Dockerfile  README.md  code_gen.py  input.json  pyproject.toml
.github/workflows/: publish-image.yml
src/PvInstallationCalculationService/: pv_installation_calculation_service.py  pv_installation_calculation_service_base.py  pv_installation_calculation_service_dataclasses.py
test/: TestPvService.py
